--- a/src/scss/objects/_forms.scss
+++ b/src/scss/objects/_forms.scss
@@ -2,7 +2,7 @@
 // @object: Form
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 0.23.0
+// @version: 1.0.0
 // @description
 //
 //------------------------------------------------------------------------------
@@ -23,7 +23,7 @@ $form-select-icon-offset: 20px !default;
 
 // Theme Variables
 $form-color: $default-action-color !default;
-$form-bg-color: $default-action-bg !default;
+$form-bg-color: $default-background-color !default;
 $form-active-color: $default-action-color-hover !default;
 $form-disabled-bg-color: $default-disabled-color !default;
 $form-disabled-color: $gray-400 !default;
