fix spelling errors using cspell ext for vscode

--- a/docs/_media/theme.scss
+++ b/docs/_media/theme.scss
@@ -115,16 +115,16 @@ img {
 	max-width: 100%;
 }
 
-kbd {
-	// font-size: 12px !important;
-	// line-height: 1;
-	// vertical-align: middle;
-	// border: solid 1px $ui-color-dark;
-	// border-radius: 3px;
-	// display: inline-block;
-	// margin-bottom: 3px;
-	// padding: 3px 5px;
-}
+// kbd {
+// 	font-size: 12px !important;
+// 	line-height: 1;
+// 	vertical-align: middle;
+// 	border: solid 1px $ui-color-dark;
+// 	border-radius: 3px;
+// 	display: inline-block;
+// 	margin-bottom: 3px;
+// 	padding: 3px 5px;
+// }
 
 
 
