--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -21,7 +21,7 @@
 // It provides a strict structure and guidelines for how your css is to be written
 // to keep your projects in check as they grow and evolve.
 //
-// The frmework was designed and developed along side the popular forum software
+// The framework was designed and developed along side the popular forum software
 // PHPBB as its core template library. By providing the most common foundations
 // in a higher layer we allow for better control and flexibility in component
 // design and themeing while still balancing maintainability and specificity.
@@ -114,7 +114,7 @@
 @import 'base/code';
 /* stylelint-enable no-duplicate-selectors */
 
-// 5. Ojbjects
+// 5. Objects
 //-------------------------
 @import 'objects/tag';
 @import 'objects/forms';
