--- a/src/scss/objects/_icon.scss
+++ b/src/scss/objects/_icon.scss
@@ -16,8 +16,8 @@ $icon-size: $default-icon-md !default;
 
 //
 // Most commonly we want specific sizing and alignment for icons in links
-// as such we target tthe most common approach to including icons svgs.
-// However a modifier is available if you are usinf icon fonts
+// as such we target the most common approach to including icons svgs.
+// However a modifier is available if you are using icon fonts
 //
 
 .o-icon {
