--- a/src/scss/settings/_color.scss
+++ b/src/scss/settings/_color.scss
@@ -2,10 +2,10 @@
 // @setting: Colors
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 1.0.2
+// @version: 1.0.3
 // @description
 //
-// A lbrary of colors built upon the Google Material Design base using a more
+// A library of colors built upon the Google Material Design base using a more
 // consistent and programtical approach.
 //
 //------------------------------------------------------------------------------
