--- a/src/scss/settings/_default.scss
+++ b/src/scss/settings/_default.scss
@@ -2,7 +2,7 @@
 // @setting: Default
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 1.0.2
+// @version: 1.0.3
 // @description
 //
 //------------------------------------------------------------------------------
@@ -257,7 +257,7 @@ $default-secondary-light-color:         $pink-500 !default;
 $default-secondary-item-color:          $gray-50 !default;
 $default-secondary-item-light-color:    $gray-1300 !default;
 
-// color shceme Error
+// color scheme Error
 $default-error-color:                   $red-700 !default;
 $default-error-dark-color:              $red-900 !default;
 $default-error-light-color:             $red-500 !default;
