--- a/src/scss/tools/mixin/_font-size.scss
+++ b/src/scss/tools/mixin/_font-size.scss
@@ -2,11 +2,11 @@
 // @tool: Font-size
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 1.0.2
+// @version: 1.0.3
 // @description
 //
 //
-// Typecsset Mixins
+// Typeset Mixins
 //
 // Quickly generate a font-size in rems, with a pixel fallback, based on the
 // value we pass into the mixin
