--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -39,5 +39,5 @@
 //-------------------------
 @import 'utilities/resets';
 @import 'utilities/clearfix';
-@import 'utilities/visability';
+@import 'utilities/visibility';
 @import 'utilities/print';
