--- a/src/scss/utilities/_visibility.scss
+++ b/src/scss/utilities/_visibility.scss
@@ -1,11 +1,11 @@
 //------------------------------------------------------------------------------
-// @utilities: Visability
+// @utilities: Visibility
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 1.0.2
+// @version: 1.0.3
 // @description:
 //
-// Responsive visability classes derived from bootstrap.
+// Responsive visibility classes derived from bootstrap.
 //
 //------------------------------------------------------------------------------
 
