--- a/src/scss/objects/_bar.scss
+++ b/src/scss/objects/_bar.scss
@@ -198,7 +198,7 @@ $bar-badge-color: $default-error-item-color !default;
 			}
 		}
 
-		&-feild {
+		&-field {
 			@include type(subtitle1, $lh: 1.5, $fw: 700);
 			background-color: transparent;
 			background-image: none;
