break out light dark into seperate rendered files

--- a/docs/_media/theme.scss
+++ b/docs/_media/theme.scss
@@ -2,6 +2,7 @@
 //-------------------------
 @import '../../src/scss/settings/color';
 @import '../../src/scss/settings/default';
+@import '../../src/scss/settings/light';
 
 
 // 2. Tools
