--- a/src/scss/core-dark.scss
+++ b/src/scss/core-dark.scss
@@ -1,6 +1,6 @@
 
 /* -----------------------------------------------------------------------------
- * Base-L: Core - Light
+ * Base-L: Core - Dark
  * -----------------------------------------------------------------------------
  * @author: hanakin -- midaym
  * @version: 1.0.3
@@ -83,7 +83,7 @@
 //-------------------------
 @import 'settings/color';
 @import 'settings/default';
-@import 'settings/light';
+@import 'settings/dark';
 
 
 // 2. Tools
