--- a/src/scss/tools/function/_letter-spacing.scss
+++ b/src/scss/tools/function/_letter-spacing.scss
@@ -2,15 +2,17 @@
 // @tool: Letter Spacing
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 1.0.2
+// @version: 1.1.0
 // @description
 //
 // A function for returning proper letter spacing based on font-size
 //
 //------------------------------------------------------------------------------
 
+@use 'sass:math';
+
 //
 // @scss
 @function letterspacing($tracking, $font-size) {
-	@return $tracking / ($font-size * 16) * 1em;
+	@return math.div($tracking, ($font-size * 16)) * 1em;
 }
