--- a/src/scss/tools/function/_strip-unit.scss
+++ b/src/scss/tools/function/_strip-unit.scss
@@ -2,15 +2,17 @@
 // @tool: Strip Units
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 1.0.2
+// @version: 1.1.0
 // @description
 //
 // A function for striping a value of units
 //
 //------------------------------------------------------------------------------
 
+@use 'sass:math';
+
 //
 // @scss
 @function strip-units($number) {
-	@return $number / ($number * 0 + 1);
+	@return math.div($number, ($number * 0 + 1));
 }
