rename unitless to avoid conflict with native fn

--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -39,7 +39,7 @@ fieldset {
 
 legend {
 	@include vertical-rhythm();
-	line-height: unitless($default-line-height);
+	line-height: unit-less($default-line-height);
 }
 
 //
