fix core bg color and type line-heights

--- a/src/scss/settings/_light.scss
+++ b/src/scss/settings/_light.scss
@@ -41,7 +41,7 @@ $default-border-color-inverted:				mode('border', 'dark', 'color');
 $default-border-hover-color-inverted:		mode('border', 'dark', 'color-hover');
 
 // other
-$default-page-color:					$gray-1400;
+$default-page-color:					$white;
 
 $default-disabled-color: 				$gray-700 !default;
 $default-disabled-stroke:				$gray-400 !default;
