update purple to md3 version

--- a/src/scss/core.1.1.1.scss
+++ b/src/scss/core.1.1.1.scss
@@ -1,9 +1,9 @@
 
 /* -----------------------------------------------------------------------------
- * Base-L: Core - Dark
+ * Base-L: Core - Light
  * -----------------------------------------------------------------------------
  * @author: hanakin -- midaym
- * @version: 1.1.0
+ * @version: 1.1.1
 
  * --------------------------------------------------------------------------- */
 
@@ -83,7 +83,7 @@
 //-------------------------
 @import 'settings/color';
 @import 'settings/default';
-@import 'settings/dark';
+@import 'settings/light';
 
 
 // 2. Tools
@@ -95,16 +95,20 @@
 // 3. Generic
 //-------------------------
 /* stylelint-disable declaration-property-unit-allowed-list */
+/* stylelint-disable order/properties-order */
 /* stylelint-disable declaration-block-no-duplicate-properties */
+/* stylelint-disable declaration-property-unit-disallowed-list */
+/* stylelint-disable max-line-length */
 /* stylelint-disable no-duplicate-selectors */
 /* stylelint-disable font-family-no-duplicate-names */
-/* stylelint-disable order/properties-order */
 @import 'generic/normalize';
 @import 'generic/box-sizing';
 /* stylelint-enable declaration-property-unit-allowed-list */
-/* stylelint-enable declaration-block-no-duplicate-properties */
-/* stylelint-enable font-family-no-duplicate-names */
 /* stylelint-enable order/properties-order */
+/* stylelint-enable declaration-block-no-duplicate-properties */
+/* stylelint-enable declaration-property-unit-disallowed-list */
+/* stylelint-enable max-line-length */
+/* stylelint-enable font-family-no-duplicate-names */
 
 // Resets
 @import 'generic/reset/global';
